--- a/Digitalmedia/index.html
+++ b/Digitalmedia/index.html
@@ -93,7 +93,7 @@
             <!-- 
                 ---HERO SECTION
              -->
-            <section class="section hero test">
+            <section class="section hero">
                 <div class="container ">
                     <div class="hero-conten">
                         <h1 class="h1 title hero-title">
@@ -103,16 +103,88 @@
                             could share your company’s story and details about why you are in business.
                         </p>
                         <div class="input-wrapper">
-                            <input type="email" name="email_address" placeholder="Enter Your Email" class="input-field" id="">
+                            <input type="email" name="email_address" placeholder="Enter Your Email" class="input-field"
+                                id="">
                             <button type="submit" class="btn btn-primary">Let's Talk</button>
                         </div>
                     </div>
                     <figure class="hero-banner">
-                        <img src="./assets/images/hero-banner.png"  width="835" height="960" alt="hero banner" class="w-100">
-                        <img src="./assets/images/hero-icon-1.png" width="100" height="100" alt="YouTube" class="shape shape-1">
-                        <img src="./assets/images/hero-icon-2.png" width="120" height="120" alt="Twitter" class="shape shape-2">
-                        <img src="./assets/images/hero-icon-3.png" width="150" height="150" alt="Instagram" class="shape shape-3">
+                        <img src="./assets/images/hero-banner.png" width="835" height="960" alt="hero banner"
+                            class="w-100">
+                        <img src="./assets/images/hero-icon-1.png" width="100" height="100" alt="YouTube"
+                            class="shape shape-1">
+                        <img src="./assets/images/hero-icon-2.png" width="120" height="120" alt="Twitter"
+                            class="shape shape-2">
+                        <img src="./assets/images/hero-icon-3.png" width="150" height="150" alt="Instagram"
+                            class="shape shape-3">
                     </figure>
+                </div>
+            </section>
+            <!-- #PROCESS -->
+
+            <section class="section process text-center test" aria-labelledby="process-label">
+                <div class="container">
+                    <h2 class="h2 title section-title">How It Works</h2>
+                    <p class="section-text">
+                        Use this section to describe your company and the products you offer. You could share your
+                        company’s story and details about why you are in business.
+                    </p>
+                    <div class="wrapper">
+                        <figure class="process-banner">
+                            <img src="./assets/images/process-banner.png" width="734" height="854" loading="lazy"
+                                alt="process banner" class="w-100">
+                        </figure>
+                        <ul class="grid-list">
+                            <li class="process-item">
+                                <img src="./assets/images/process-icon-1.png" width="60" height="60" loading="lazy"
+                                    alt="" class="item-icon">
+                                <h3 class="h3 title item-title">Ideation</h3>
+                                <p class="item-text">
+                                    Use this section to describe your company and the products you offer. You could
+                                    share your company’s
+                                </p>
+                            </li>
+
+
+                            <li class="process-item">
+                                <img src="./assets/images/process-icon-2.png" width="60" height="60" loading="lazy"
+                                    alt="" class="item-icon">
+                                <h3 class="h3 title item-title">Budget</h3>
+                                <p class="item-text">
+                                    Use this section to describe your company and the products you offer. You could
+                                    share your company’s
+                                </p>
+                            </li>
+
+
+
+                            <li class="process-item">
+                                <img src="./assets/images/process-icon-3.png" width="60" height="60" loading="lazy"
+                                    alt="" class="item-icon">
+                                <h3 class="h3 title item-title">Performance</h3>
+                                <p class="item-text">
+                                    Use this section to describe your company and the products you offer. You could
+                                    share your company’s
+                                </p>
+                            </li>
+
+                            <li class="process-item">
+                                <img src="./assets/images/process-icon-4.png" width="60" height="60" loading="lazy"
+                                    alt="" class="item-icon">
+                                <h3 class="h3 title item-title">Speed</h3>
+                                <p class="item-text">
+                                    Use this section to describe your company and the products you offer. You could
+                                    share your company’s
+                                </p>
+                            </li>
+
+
+
+
+
+
+                        </ul>
+                    </div>
                 </div>
             </section>
         </article>
