--- a/Digitalmedia/index.html
+++ b/Digitalmedia/index.html
@@ -124,7 +124,7 @@
 
             <section class="section process text-center test" aria-labelledby="process-label">
                 <div class="container">
-                    <h2 class="h2 title section-title">How It Works</h2>
+                    <h2 class="h2 title section-title" id="process-label">How It Works</h2>
                     <p class="section-text">
                         Use this section to describe your company and the products you offer. You could share your
                         company’s story and details about why you are in business.
@@ -186,6 +186,58 @@
                         </ul>
                     </div>
                 </div>
+            </section>
+            <!-- #WORK -->
+            <section class="section works text-center" aria-labelledby="works-lable">
+                <div class="container">
+                    <h2 class="h2 title section-title">Our Work</h2>
+                    <p class="section-text">
+                        Use this section to describe your company and the products you offer. You could share your
+                        company’s story and details about why you are in business.
+                    </p>
+                    <ul class="grid-list">
+                        <li>
+                            <div class="work-card">
+                                <figure style="--width:580;--height:620" class="card-banner img-holder">
+                                    <img src="./assets/images/work-1.jpg" width="580" height="620" loading="lazy"
+                                        alt="Product Design" class="img-cover">
+                                </figure>
+                                <h3 class="h3 title">
+                                    <a href="#" class="card-title">Product Design</a>
+                                </h3>
+                                <p class="card-text">Use this section to describe your work</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="work-card">
+                                <figure style="--width:580;--height:620" class="card-banner img-holder">
+                                    <img src="./assets/images/work-2.jpg" width="580" height="620" loading="lazy"
+                                        alt="App Development" class="img-cover">
+                                </figure>
+                                <h3 class="h3 title">
+                                    <a href="#" class="card-title">App Development</a>
+                                </h3>
+                                <p class="card-text">Use this section to describe your work</p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="work-card">
+                                <figure style="--width:580;--height:620" class="card-banner img-holder">
+                                    <img src="./assets/images/work-3.jpg" width="580" height="620" loading="lazy"
+                                        alt="Virtual Reality" class="img-cover">
+                                </figure>
+                                <h3 class="h3 title">
+                                    <a href="#" class="card-title">Virtual Reality</a>
+                                </h3>
+                                <p class="card-text">Use this section to describe your work</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">See More</a>
+                </div>
+
             </section>
         </article>
     </main>
