--- a/Digitalmedia/index.html
+++ b/Digitalmedia/index.html
@@ -122,7 +122,7 @@
             </section>
             <!-- #PROCESS -->
 
-            <section class="section process text-center test" aria-labelledby="process-label">
+            <section class="section process text-center " aria-labelledby="process-label">
                 <div class="container">
                     <h2 class="h2 title section-title" id="process-label">How It Works</h2>
                     <p class="section-text">
@@ -242,8 +242,108 @@
         </article>
     </main>
 
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="section footer-top">
+            <div class="container">
+                <div class="footer-brand">
+                    <a href="#" class="logo"><img src="./assets/images/logo.svg" width="205" height="40" loading="lazy"
+                            alt="Digitalmedia home"></a>
+                    <address class="footer-text">
+                        Los Angeles, California, USA
+                    </address>
+                    <ul class="social-list">
+                        <li>
+                            <a href="#" class="social-link">
+                                <ion-icon name="logo-instagram"></ion-icon>
+                            </a>
+                        </li>
 
 
+                        <li>
+                            <a href="#" class="social-link">
+                                <ion-icon name="logo-twitter"></ion-icon>
+                            </a>
+                        </li>
+
+
+                        <li>
+                            <a href="#" class="social-link">
+                                <ion-icon name="logo-facebook"></ion-icon>
+                            </a>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">Contact Us</a>
+                </div>
+                <ul class="footer-list">
+                    <li>
+                        <a href="" class="footer-link">Work With Us</a>
+                    </li>
+
+
+                    <li>
+                        <a href="" class="footer-link">Advertise With Us</a>
+                    </li>
+
+
+                    <li>
+                        <a href="" class="footer-link">Support Us</a>
+                    </li>
+
+
+                    <li>
+                        <a href="" class="footer-link">Business Advices</a>
+                    </li>
+
+
+                    <li>
+                        <a href="" class="footer-link">Private Coaching</a>
+                    </li>
+
+
+                    <li>
+                        <a href="" class="footer-link">Our Work</a>
+                    </li>
+
+
+                    <li>
+                        <a href="" class="footer-link">Our Commitment</a>
+                    </li>
+
+
+                    <li>
+                        <a href="" class="footer-link">Our Team</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer-link">About Us</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer-link">FAQs</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer-link">Report a Bug</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom text-center">
+        <div class="container">
+            <p class="copyright">&copy; 2023 Digitalmedia, Inc. - Developed By <a class="link" href = "https://www.youtube.com/@codewithsadee">codewithsadee</a></p>
+        <ul class="footer-bottom-list">
+            <li>
+                <a href="" class="footer-link">Terms of use</a>
+            </li>
+            <li>
+                <a href="" class="footer-link">Privacy policy</a>
+            </li>
+        </ul>
+        </div>
+        </div>
+    </footer>
 
     <!-- 
         /------------------------------------------------------------------\
