--- a/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
+++ b/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
@@ -76,45 +76,76 @@
                             </span>
                         </div>
                     </div>
-                     <!-- item -->
-                     <div class="trend-item"><img
-                        src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-                        alt="">
-                    <div class="trend-item-content">
-                        <h4>Comfortable Pink Sofa</h4>
-                        <h4>$80.00</h4>
-                        <div class="stars">
-                            <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                            <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                            <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                            <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                            <span><i class="far fa-star" aria-hidden="true"></i></span>
+                    <!-- item -->
+                    <div class="trend-item"><img
+                            src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                        <div class="trend-item-content">
+                            <h4>Comfortable Pink Sofa</h4>
+                            <h4>$80.00</h4>
+                            <div class="stars">
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="far fa-star" aria-hidden="true"></i></span>
+                            </div>
+                            <span class="chevron-icon">
+                                <i class="fas fa-chevron-right    "></i>
+                            </span>
                         </div>
-                        <span class="chevron-icon">
-                            <i class="fas fa-chevron-right    "></i>
-                        </span>
                     </div>
-                </div>
-                 <!-- item -->
-                 <div class="trend-item"><img
-                    src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
-                    alt="">
-                <div class="trend-item-content">
-                    <h4>Stylish Red Chair</h4>
-                    <h4>$30.00</h4>
-                    <div class="stars">
-                        <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                        <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                        <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                        <span><i class="fas fa-star" aria-hidden="true"></i></span>
-                        <span><i class="far fa-star" aria-hidden="true"></i></span>
+                    <!-- item -->
+                    <div class="trend-item"><img
+                            src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                        <div class="trend-item-content">
+                            <h4>Stylish Red Chair</h4>
+                            <h4>$30.00</h4>
+                            <div class="stars">
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="fas fa-star" aria-hidden="true"></i></span>
+                                <span><i class="far fa-star" aria-hidden="true"></i></span>
+                            </div>
+                            <span class="chevron-icon">
+                                <i class="fas fa-chevron-right    "></i>
+                            </span>
+                        </div>
                     </div>
-                    <span class="chevron-icon">
-                        <i class="fas fa-chevron-right    "></i>
-                    </span>
+
                 </div>
             </div>
-            
+        </section>
+        <section>
+            <div class="underline"></div>
+        </section>
+        <!-- featured product -->
+        <section class="featured">
+            <div class="container-fluid">
+                <!-- item -->
+                <div class="featured-item">
+                    <div class="featured-item-img">
+                        <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="featured-item-content">
+                        <div class="title">
+                            <h4>featured product</h4>
+                            <h2>red sofa with pillows</h2>
+                            <p class="item-price">$55.00</p>
+                        </div>
+                        <p class="text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aliquid voluptate
+                            aliquam fugit, numquam fuga eveniet nam deleniti ducimus temporibus blanditiis adipisci
+                            saepe libero. Necessitatibus aperiam ullam doloribus mollitia quisquam?
+                        </p>
+                        <div class="featured-btns">
+                            <button type="button" class="btn">Explore</button>
+                            <button type="button" class="btn">Purchase</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
