--- a/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
+++ b/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
@@ -147,6 +147,54 @@
                         </div>
                     </div>
                 </div>
+                 <!-- item -->
+                 <div class="featured-item">
+                    <div class="featured-item-img">
+                        <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="featured-item-content">
+                        <div class="title">
+                            <h4>featured product</h4>
+                            <h2>Sofa #2</h2>
+                            <p class="item-price">$55.00</p>
+                        </div>
+                        <p class="text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aliquid voluptate
+                            aliquam fugit, numquam fuga eveniet nam deleniti ducimus temporibus blanditiis adipisci
+                            saepe libero. Necessitatibus aperiam ullam doloribus mollitia quisquam?
+                        </p>
+                        <div class="featured-btns">
+                            <button type="button" class="btn">Explore</button>
+                            <button type="button" class="btn">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+                 <!-- item -->
+                 <div class="featured-item">
+                    <div class="featured-item-img">
+                        <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="featured-item-content">
+                        <div class="title">
+                            <h4>featured product</h4>
+                            <h2>Sofa #3</h2>
+                            <p class="item-price">$55.00</p>
+                        </div>
+                        <p class="text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aliquid voluptate
+                            aliquam fugit, numquam fuga eveniet nam deleniti ducimus temporibus blanditiis adipisci
+                            saepe libero. Necessitatibus aperiam ullam doloribus mollitia quisquam?
+                        </p>
+                        <div class="featured-btns">
+                            <button type="button" class="btn">Explore</button>
+                            <button type="button" class="btn">Purchase</button>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
     </main>
