--- a/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
+++ b/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
@@ -147,8 +147,8 @@
                         </div>
                     </div>
                 </div>
-                 <!-- item -->
-                 <div class="featured-item">
+                <!-- item -->
+                <div class="featured-item">
                     <div class="featured-item-img">
                         <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
                             alt="">
@@ -170,8 +170,8 @@
                         </div>
                     </div>
                 </div>
-                 <!-- item -->
-                 <div class="featured-item">
+                <!-- item -->
+                <div class="featured-item">
                     <div class="featured-item-img">
                         <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
                             alt="">
@@ -193,8 +193,87 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- Blog -->
+        <section class="blog">
+            <div class="container-fluid">
+                <div class="title">
+                    <h4>daily upate</h4>
+                    <h2>latest blog</h2>
+                </div>
+                <div class="blog-grid">
+                    <!-- iteam -->
+                    <div class="blog-item">
+                        <div class="blog-item-img">
+                            <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                                alt="">
+                        </div>
+                        <div class="blog-item-content">
+                            <a href="">creative ideas for decoration</a>
+                            <div>
+                                <span>january 20 | design | furniture</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- iteam -->
+                    <div class="blog-item">
+                        <div class="blog-item-img">
+                            <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                                alt="">
+                        </div>
+                        <div class="blog-item-content">
+                            <a href="">creative ideas for decoration</a>
+                            <div>
+                                <span>january 20 | design | furniture</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- iteam -->
+                    <div class="blog-item">
+                        <div class="blog-item-img">
+                            <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                                alt="">
+                        </div>
+                        <div class="blog-item-content">
+                            <a href="">creative ideas for decoration</a>
+                            <div>
+                                <span>january 20 | design | furniture</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- iteam -->
+                    <div class="blog-item">
+                        <div class="blog-item-img">
+                            <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                                alt="">
+                        </div>
+                        <div class="blog-item-content">
+                            <a href="">creative ideas for decoration</a>
+                            <div>
+                                <span>january 20 | design | furniture</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="newsletter">
+            <div class="container-fluid">
+                <div class="title">
+                    <h4>subscrible to our newsletter</h4>
+                    <h2>Newsletter</h2>
 
-
+                </div>
+                <form action="">
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Enter your email address">
+                        <button type="submit" class="subscrible">subscrible</button>
+                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    </div>
+                </form>
+                <div class="circle-box circle-1"></div>
+                <div class="circle-box circle-2"></div>
             </div>
         </section>
     </main>
