--- a/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/index.html
+++ b/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="page" class="site">
         <header>
-            <div class="header-top">
+            <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
                         <div class="left">
@@ -127,7 +127,7 @@
                                                     </div>
                                                     <div class="flexcol">
                                                         <div class="row">
-                                                           
+
                                                             <ul class="women-brands">
                                                                 <li><a href="">Nike</a></li>
                                                                 <li><a href="">Louis Vuitton</a></li>
@@ -140,8 +140,22 @@
                                                                 <li><a href="">Cartier</a></li>
                                                                 <li><a href="">Chanel</a></li>
                                                                 <li><a href="">Hurley</a></li>
-                                                              
+
                                                             </ul>
+                                                            <a href="" class="view-all">View all brands</a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="flexcol  products">
+                                                        <div class="row">
+                                                            <div class="media">
+                                                                <div class="thumbnail">
+                                                                    <img src="assets/products/apparel4.jpg" alt="">
+                                                                </div>
+                                                            </div>
+                                                            <div class="text-content">
+                                                                <h4>Most wanted!</h4>
+                                                                <a href="" class="primary-button">Order Now</a>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
