--- a/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
+++ b/Ecommerce Product Page Using HTML and CSS  Furniture Website/index.html
@@ -193,6 +193,29 @@
                         </div>
                     </div>
                 </div>
+                 <!-- item -->
+                 <div class="featured-item">
+                    <div class="featured-item-img">
+                        <img src="https://images.unsplash.com/photo-1583847268964-b28dc8f51f92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGl2aW5nJTIwcm9vbXxlbnwwfDF8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="featured-item-content">
+                        <div class="title">
+                            <h4>featured product</h4>
+                            <h2>Sofa #4</h2>
+                            <p class="item-price">$55.00</p>
+                        </div>
+                        <p class="text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aliquid voluptate
+                            aliquam fugit, numquam fuga eveniet nam deleniti ducimus temporibus blanditiis adipisci
+                            saepe libero. Necessitatibus aperiam ullam doloribus mollitia quisquam?
+                        </p>
+                        <div class="featured-btns">
+                            <button type="button" class="btn">Explore</button>
+                            <button type="button" class="btn">Purchase</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Blog -->
@@ -268,17 +291,70 @@
                 <form action="">
                     <div class="form-group">
                         <input type="email" class="form-control" placeholder="Enter your email address">
-                        <button type="submit" class="subscrible">subscrible</button>
-                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <button type="submit" class="subscrible-btn">subscrible</button>
+                      
                     </div>
                 </form>
                 <div class="circle-box circle-1"></div>
                 <div class="circle-box circle-2"></div>
             </div>
         </section>
+
     </main>
-    <footer>
+    <footer class="footer container-fluid">
         <!-- place footer here -->
+        <div class="footer-item">
+            <h2 class="brand-name">
+                Sofa <span>House</span>
+            </h2>
+            <p>social media accounts</p>
+            <ul class="footer-icons">
+
+                <li>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href=""><i class="fa-brands fa-twitch"></i></a>
+                </li>
+                <li>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href=""><i class="fa-brands fa-google-plus-g"></i></i></a>
+                </li>
+
+            </ul>
+        </div>
+        <div class="footer-item">
+            <h3>Links</h3>
+            <ul>
+                <li><a href="">home</a></li>
+                <li><a href="">download</a></li>
+                <li><a href="">pricing</a></li>
+                <li><a href="">about</a></li>
+            </ul>
+        </div>
+        <div class="footer-item">
+            <h3>Products</h3>
+            <ul>
+                <li><a href="">chair</a></li>
+                <li><a href="">sofa</a></li>
+                <li><a href="">pillow</a></li>
+                <li><a href="">cushion</a></li>
+            </ul>
+        </div>
+        <div class="footer-item">
+            <h3>Support</h3>
+            <ul>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">how it works</a></li>
+                <li><a href="">pricing</a></li>
+                <li><a href="">about</a></li>
+            </ul>
+        </div>
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
