--- a/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/index.html
+++ b/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/index.html
@@ -12,6 +12,23 @@
 
 <body>
     <div id="page" class="site">
+        <aside class="site-off desktop-hide">
+            <div class="off-canvas">
+                <div class="canvas-head">
+                
+                    <div class="logo">
+                        <a href="/"> <span class="circle"></span>.Store </a>
+                    </div>
+                    <a href="#" class="t-close flexcenten">
+                        <i class="ri-close-line"></i>
+                    </a>
+                </div>
+                <div class="departments"></div>
+                <nav></nav>
+                <div class="thetop-nav"></div>
+
+            </div>
+        </aside>
         <header>
             <div class="header-top mobile-hide">
                 <div class="container">
