--- a/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/index.html
+++ b/HTML eCommerce site, CSS Javascript – Complete multi-page responsiveness/index.html
@@ -8,6 +8,7 @@
     <title>Ecommerce Website</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -439,7 +440,30 @@
                 </div>
             </div>
         </header>
-        <main></main>
+        <main>
+            <div class="slider">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="myslider">
+                            <div class="wrapper">
+                                <div class="slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider0.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Shoes Fashion</h4>
+                                            <h2><span>Come and Get it!</span><br><span>Brand New Shoes</span></h2>
+                                            <a href="" class="primary-button">Shop now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <footer></footer>
     </div>
 
@@ -449,4 +473,5 @@
 </html>
 
 <!-- https://www.youtube.com/watch?v=qKoe69-xy4M -->
-<!-- phut 59 -->
+<!-- phut 1:07:31
+ -->
