--- a/Building a Stock Media Platform/index.html
+++ b/Building a Stock Media Platform/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- gọi data-theme trong css để thay đổi màu nền -->
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -35,11 +36,28 @@
         <!-- 
         - custom js link
       -->
-      <script src="./js/global.js"></script>
+      <script src="./js/global.js" type="module"></script>
+      <script src="./js/app.js" type="module"></script>
+      <script src="./js/search.js" type="module"></script>
+
 </head>
 
 <body>
-
+  <p class="display-large">Typography</p>
+  <p class="display-medium">Typography</p>
+  <p class="display-small">Typography</p>
+  <p class="headline-large">Typography</p>
+  <p class="headline-medium">Typography</p>
+  <p class="headline-small">Typography</p>
+  <p class="title-large">Typography</p>
+  <p class="title-medium">Typography</p>
+  <p class="title-small">Typography</p>
+  <p class="label-large">Typography</p>
+  <p class="label-medium">Typography</p>
+  <p class="label-small">Typography</p>
+  <p class="body-large">Typography</p>
+  <p class="body-medium">Typography</p>
+  <p class="body-small">Typography</p>
 </body>
 
 </html>
