--- a/Building a Stock Media Platform/index.html
+++ b/Building a Stock Media Platform/index.html
@@ -3,61 +3,137 @@
 <html lang="en" data-theme="light">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 
         -primary meta tags
      -->
-    <title>Pixstock - A large stock library</title>
-    <meta name="title" content="Pixstock - A large stock library">
-    <meta name="description" content="This is a stock photos app made by codewithsadee">
-    <!-- 
+  <title>Pixstock - A large stock library</title>
+  <meta name="title" content="Pixstock - A large stock library">
+  <meta name="description" content="This is a stock photos app made by codewithsadee">
+  <!-- 
         -favicon
      -->
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
-    <!-- 
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <!-- 
         - theme js link
       -->
-    <script src="./js/theme.js"></script>
-    <!-- 
+  <script src="./js/theme.js"></script>
+  <!-- 
         - google font link
       -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
-      <!-- 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
+  <!-- 
         - material icon link
       -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" />
-      <!-- 
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" />
+  <!-- 
         - custom css link
       -->
-      <link rel="stylesheet" href="./css/style.css">
-        <!-- 
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- 
         - custom js link
       -->
-      <script src="./js/global.js" type="module"></script>
-      <script src="./js/app.js" type="module"></script>
-      <script src="./js/search.js" type="module"></script>
+  <script src="./js/global.js" type="module"></script>
+  <script src="./js/app.js" type="module"></script>
+  <script src="./js/search.js" type="module"></script>
 
 </head>
 
 <body>
-  <p class="display-large">Typography</p>
-  <p class="display-medium">Typography</p>
-  <p class="display-small">Typography</p>
-  <p class="headline-large">Typography</p>
-  <p class="headline-medium">Typography</p>
-  <p class="headline-small">Typography</p>
-  <p class="title-large">Typography</p>
-  <p class="title-medium">Typography</p>
-  <p class="title-small">Typography</p>
-  <p class="label-large">Typography</p>
-  <p class="label-medium">Typography</p>
-  <p class="label-small">Typography</p>
-  <p class="body-large">Typography</p>
-  <p class="body-medium">Typography</p>
-  <p class="body-small">Typography</p>
+  <!-- 
+    - #Header 
+   -->
+  <header class="top-app-bar" data-header>
+    <button class="icon-btn" aria-label="Open menu" data-nav-toggle data-ripple>
+      <span class="material-symbols-outlined" aria-hidden="true">menu</span>
+      <div class="state-layer"></div>
+    </button>
+    <a href="" class="logo">Pixstock</a>
+    <div class="search-view" data-search-view>
+      <!--  -->
+      <div class="search-bar">
+        <button class="icon-btn search-open" aria-label="Close search" data-search-toggle data-ripple>
+          <span class="material-symbols-outlined" aria-hidden="true">arrow_back</span>
+          <div class="state-layer"></div>
+        </button>
+        <div class="input-wrapper">
+          <span class="material-symbols-outlined leading-icon" aria-hidden="true">search</span>
+          <input type="search" name="search" id="" placeholder="Search..." class="input-field body-large"
+            autocomplete="off" data-search-field>
+        </div>
+        <button class="icon-btn" aria-label="Clear search" data-search-clear-btn data-ripple>
+          <span class="material-symbols-outlined" aria-hidden="true">close</span>
+          <div class="state-layer"></div>
+        </button>
+        <button class="icon-btn search-btn" aria-label="Submit search" data-search-toggle data-ripple=""
+          data-search-btn>
+          <span class="material-symbols-outlined" aria-hidden="true">search</span>
+          <div class="state-layer"></div>
+        </button>
+        <div class="state-layer"></div>
+      </div>
+      <!-- //asd -->
+      <!--  -->
+      <div class="search-view-content">
+        <!-- image, videocam -->
+        <div class="btn-group" data-segment="search">
+          <button class="btn-segment selected" data-ripple data-segment-btn data-segment-value="photos">
+            <span class="material-symbols-outlined" aria-hidden="true">image</span>
+            <span class="label-large text">Photos</span>
+            <div class="state-layer"></div>
+          </button>
+
+          <button class="btn-segment selected" data-ripple data-segment-btn data-segment-value="videos">
+            <span class="material-symbols-outlined" aria-hidden="true">videocam</span>
+            <span class="label-large text">Videos</span>
+            <div class="state-layer"></div>
+          </button>
+        </div>
+        <!--// image, videocam -->
+        <div class="divider"></div>
+        <!-- history -->
+        <div class="list" data-search-list>
+          <button class="list-item" data-ripple="">
+            <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
+            <span class="body-large text">Nature</span>
+            <div class="state-layer"></div>
+          </button>
+          <button class="list-item" data-ripple="">
+            <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
+            <span class="body-large text">Tree</span>
+            <div class="state-layer"></div>
+          </button>
+          <button class="list-item" data-ripple="">
+            <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
+            <span class="body-large text">Nature</span>
+            <div class="state-layer"></div>
+          </button>
+          <button class="list-item" data-ripple="">
+            <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
+            <span class="body-large text">Man portrait</span>
+            <div class="state-layer"></div>
+          </button>
+          <button class="list-item" data-ripple="">
+            <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
+            <span class="body-large text">Mountain</span>
+            <div class="state-layer"></div>
+          </button>
+
+        </div>
+        <!-- //history -->
+
+      </div>
+      <!-- // -->
+    </div>
+    <button class="icon-btn search-open" aria-level="Open search" data-search-toggle="" data-ripple="">
+
+    </button>
+  </header>
+
 </body>
 
 </html>
