--- a/Building a Stock Media Platform/index.html
+++ b/Building a Stock Media Platform/index.html
@@ -19,22 +19,22 @@
         - theme js link
       -->
   <script src="./js/theme.js"></script>
-  <!-- 
+  <!--
         - google font link
       -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
-  <!-- 
+  <!--
         - material icon link
       -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" />
-  <!-- 
+  <!--
         - custom css link
       -->
   <link rel="stylesheet" href="./css/style.css">
-  <!-- 
+  <!--
         - custom js link
       -->
   <script src="./js/global.js" type="module"></script>
@@ -44,12 +44,13 @@
 </head>
 
 <body>
-  <!-- 
-    - #Header 
-   -->
+  <!--
+    - #Header
+  -->
   <header class="top-app-bar" data-header>
     <button class="icon-btn" aria-label="Open menu" data-nav-toggle data-ripple>
       <span class="material-symbols-outlined" aria-hidden="true">menu</span>
+    
       <div class="state-layer"></div>
     </button>
     <a href="" class="logo">Pixstock</a>
@@ -69,7 +70,7 @@
           <span class="material-symbols-outlined" aria-hidden="true">close</span>
           <div class="state-layer"></div>
         </button>
-        <button class="icon-btn search-btn" aria-label="Submit search" data-search-toggle data-ripple=""
+        <button class="icon-btn search-btn" aria-label="Submit search" data-search-toggle data-ripple
           data-search-btn>
           <span class="material-symbols-outlined" aria-hidden="true">search</span>
           <div class="state-layer"></div>
@@ -97,43 +98,52 @@
         <div class="divider"></div>
         <!-- history -->
         <div class="list" data-search-list>
-          <button class="list-item" data-ripple="">
+          <button class="list-item" data-ripple>
             <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
             <span class="body-large text">Nature</span>
             <div class="state-layer"></div>
           </button>
-          <button class="list-item" data-ripple="">
+          <button class="list-item" data-ripple>
             <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
             <span class="body-large text">Tree</span>
             <div class="state-layer"></div>
           </button>
-          <button class="list-item" data-ripple="">
+          <button class="list-item" data-ripple>
             <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
             <span class="body-large text">Nature</span>
             <div class="state-layer"></div>
           </button>
-          <button class="list-item" data-ripple="">
+          <button class="list-item" data-ripple>
             <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
             <span class="body-large text">Man portrait</span>
             <div class="state-layer"></div>
           </button>
-          <button class="list-item" data-ripple="">
+          <button class="list-item" data-ripple>
             <span class="material-symbols-outlined leading-icon" aria-hidden="true">history</span>
             <span class="body-large text">Mountain</span>
             <div class="state-layer"></div>
           </button>
-
         </div>
         <!-- //history -->
-
       </div>
       <!-- // -->
     </div>
-    <button class="icon-btn search-open" aria-level="Open search" data-search-toggle="" data-ripple="">
-
+    <!-- button search -->
+    <button class="icon-btn search-open" aria-level="Open search" data-search-toggle data-ripple>
+      <span class="material-symbols-outlined" aria-hidden="true">search</span>
+      <div class="state-layer"></div>
     </button>
-  </header>
+    <!-- //button search -->
+    <!-- button light and dark -->
+    <button class="icon-btn theme-btn" aria-label="Switch theme" data-nav-toggle data-ripple>
+      <span class="material-symbols-outlined dark-icon" aria-hidden="true">dark_mode</span>
+      <span class="material-symbols-outlined light-icon" aria-hidden="true">light_mode</span>
+      <div class="state-layer"></div>
+    </button>
+    <!-- //button light and dark -->
 
+  </header>
+ 
 </body>
 
 </html>
