--- a/Building a Stock Media Platform/index.html
+++ b/Building a Stock Media Platform/index.html
@@ -54,7 +54,7 @@
       <div class="state-layer"></div>
     </button>
     <a href="" class="logo">Pixstock</a>
-    <div class="search-view" data-search-view>
+    <div class="search-view show" data-search-view>
       <!--  -->
       <div class="search-bar">
         <button class="icon-btn search-open" aria-label="Close search" data-search-toggle data-ripple>
@@ -88,7 +88,7 @@
             <div class="state-layer"></div>
           </button>
 
-          <button class="btn-segment selected" data-ripple data-segment-btn data-segment-value="videos">
+          <button class="btn-segment" data-ripple data-segment-btn data-segment-value="videos">
             <span class="material-symbols-outlined" aria-hidden="true">videocam</span>
             <span class="label-large text">Videos</span>
             <div class="state-layer"></div>
