--- a/Building a Stock Media Platform/index.html
+++ b/Building a Stock Media Platform/index.html
@@ -54,7 +54,7 @@
       <div class="state-layer"></div>
     </button>
     <a href="" class="logo">Pixstock</a>
-    <div class="search-view show" data-search-view>
+    <div class="search-view " data-search-view>
       <!--  -->
       <div class="search-bar">
         <button class="icon-btn search-open" aria-label="Close search" data-search-toggle data-ripple>
@@ -135,7 +135,7 @@
     </button>
     <!-- //button search -->
     <!-- button light and dark -->
-    <button class="icon-btn theme-btn" aria-label="Switch theme" data-nav-toggle data-ripple>
+    <button class="icon-btn theme-btn" aria-label="Switch theme" data-theme-toggler data-ripple>
       <span class="material-symbols-outlined dark-icon" aria-hidden="true">dark_mode</span>
       <span class="material-symbols-outlined light-icon" aria-hidden="true">light_mode</span>
       <div class="state-layer"></div>
@@ -143,7 +143,7 @@
     <!-- //button light and dark -->
 
   </header>
- 
+  
 </body>
 
 </html>
