--- a/Building a Stock Media Platform/index.html
+++ b/Building a Stock Media Platform/index.html
@@ -54,7 +54,7 @@
       <div class="state-layer"></div>
     </button>
     <a href="" class="logo">Pixstock</a>
-    <div class="search-view " data-search-view>
+    <div class="search-view show" data-search-view>
       <!--  -->
       <div class="search-bar">
         <button class="icon-btn search-open" aria-label="Close search" data-search-toggle data-ripple>
