--- a/Building a Stock Media Platform/index.html
+++ b/Building a Stock Media Platform/index.html
@@ -54,10 +54,10 @@
       <div class="state-layer"></div>
     </button>
     <a href="" class="logo">Pixstock</a>
-    <div class="search-view show" data-search-view>
+    <div class="search-view " data-search-view>
       <!--  -->
       <div class="search-bar">
-        <button class="icon-btn search-open" aria-label="Close search" data-search-toggle data-ripple>
+        <button class="icon-btn search-open" aria-label="Close search" data-search-toggler data-ripple>
           <span class="material-symbols-outlined" aria-hidden="true">arrow_back</span>
           <div class="state-layer"></div>
         </button>
@@ -70,7 +70,7 @@
           <span class="material-symbols-outlined" aria-hidden="true">close</span>
           <div class="state-layer"></div>
         </button>
-        <button class="icon-btn search-btn" aria-label="Submit search" data-search-toggle data-ripple
+        <button class="icon-btn search-btn" aria-label="Submit search" data-search-toggler data-ripple
           data-search-btn>
           <span class="material-symbols-outlined" aria-hidden="true">search</span>
           <div class="state-layer"></div>
@@ -82,13 +82,13 @@
       <div class="search-view-content">
         <!-- image, videocam -->
         <div class="btn-group" data-segment="search">
-          <button class="btn-segment selected" data-ripple data-segment-btn data-segment-value="photos">
+          <button class="btn-segment " data-ripple data-segment-btn data-segment-value="photos">
             <span class="material-symbols-outlined" aria-hidden="true">image</span>
             <span class="label-large text">Photos</span>
             <div class="state-layer"></div>
           </button>
 
-          <button class="btn-segment" data-ripple data-segment-btn data-segment-value="videos">
+          <button class="btn-segment selected" data-ripple data-segment-btn data-segment-value="videos">
             <span class="material-symbols-outlined" aria-hidden="true">videocam</span>
             <span class="label-large text">Videos</span>
             <div class="state-layer"></div>
@@ -129,7 +129,7 @@
       <!-- // -->
     </div>
     <!-- button search -->
-    <button class="icon-btn search-open" aria-level="Open search" data-search-toggle data-ripple>
+    <button class="icon-btn search-open" aria-level="Open search" data-search-toggler data-ripple>
       <span class="material-symbols-outlined" aria-hidden="true">search</span>
       <div class="state-layer"></div>
     </button>
